load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "execution",
    srcs = [
        "block_cache.go",
        "block_reader.go",
        "deposit.go",
        "engine_client.go",
        "errors.go",
        "log.go",
        "log_processing.go",
        "metrics.go",
        "options.go",
        "prometheus.go",
        "rpc_connection.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/execution",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/cache",
        "//beacon-chain/cache/depositsnapshot",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/execution/types",
        "//beacon-chain/state",
        "//beacon-chain/state/state-native",
        "//beacon-chain/state/stategen",
        "//config/features",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/payload-attribute",
        "//consensus-types/primitives",
        "//container/trie",
        "//contracts/deposit",
        "//crypto/hash",
        "//encoding/bytesutil",
        "//io/logs",
        "//monitoring/clientstats",
        "//monitoring/tracing",
        "//network",
        "//network/authorization",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "//runtime/version",
        "//time",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//:go-zond",
        "@com_github_theqrl_go_zond//accounts/abi/bind",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//common/hexutil",
        "@com_github_theqrl_go_zond//core/types",
        "@com_github_theqrl_go_zond//qrlclient",
        "@com_github_theqrl_go_zond//rpc",
        "@io_k8s_client_go//tools/cache",
        "@io_opencensus_go//trace",
    ],
)

go_test(
    name = "execution_test",
    srcs = [
        "block_cache_test.go",
        "block_reader_test.go",
        "deposit_test.go",
        "engine_client_fuzz_test.go",
        "engine_client_test.go",
        "execution_chain_test.go",
        "init_test.go",
        "log_processing_test.go",
        "prometheus_test.go",
        "service_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":execution"],
    deps = [
        "//async/event",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/db/testing",
        "//beacon-chain/execution/testing",
        "//beacon-chain/execution/types",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/state/stategen",
        "//config/features",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/payload-attribute",
        "//consensus-types/primitives",
        "//container/trie",
        "//contracts/deposit",
        "//contracts/deposit/mock",
        "//crypto/ml_dsa_87",
        "//encoding/bytesutil",
        "//monitoring/clientstats",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "//runtime/version",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_zond//:go-zond",
        "@com_github_theqrl_go_zond//accounts/abi/bind/backends",
        "@com_github_theqrl_go_zond//beacon/engine",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//common/hexutil",
        "@com_github_theqrl_go_zond//core/types",
        "@com_github_theqrl_go_zond//rpc",
    ],
)
