load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "forkchoice",
    srcs = [
        "doc.go",
        "error.go",
        "interfaces.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/forkchoice",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/forkchoice/types",
        "//beacon-chain/state",
        "//config/fieldparams",
        "//consensus-types/blocks",
        "//consensus-types/primitives",
        "//proto/qrl/v1:qrl",
        "@com_github_pkg_errors//:errors",
    ],
)
