load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "gateway",
    srcs = ["helpers.go"],
    importpath = "github.com/theQRL/qrysm/beacon-chain/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//api/gateway",
        "//cmd/beacon-chain/flags",
        "//proto/qrl/service",
        "//proto/qrysm/v1alpha1",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//runtime",
        "@org_golang_google_protobuf//encoding/protojson",
    ],
)

go_test(
    name = "gateway_test",
    srcs = ["helpers_test.go"],
    embed = [":gateway"],
    deps = [
        "//api/gateway",
        "//testing/assert",
        "//testing/require",
    ],
)
