load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "helpers.go",
        "store.go",
        "update.go",
    ],
    importpath = "github.com/theQRL/qrysm/v4/beacon-chain/lightclient",
    visibility = ["//visibility:public"],
    deps = [
        "//beacon-chain/blockchain:go_default_library",
        "//beacon-chain/core/signing:go_default_library",
        "//config/params:go_default_library",
        "//consensus-types/primitives:go_default_library",
        "//container/trie:go_default_library",
        "//crypto/bls/blst:go_default_library",
        "//crypto/bls/common:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/zond/v1:go_default_library",
        "@com_github_theqrl_go_zond//common/hexutil:go_default_library",
    ],
)