load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "monitor",
    srcs = [
        "doc.go",
        "metrics.go",
        "process_attestation.go",
        "process_block.go",
        "process_exit.go",
        "process_sync_committee.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/monitor",
    visibility = ["//visibility:public"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/operation",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/helpers",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//config/params",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/attestation",
        "//time/slots",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "monitor_test",
    srcs = [
        "process_attestation_test.go",
        "process_block_test.go",
        "process_exit_test.go",
        "process_sync_committee_test.go",
        "service_test.go",
    ],
    embed = [":monitor"],
    deps = [
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/db/testing",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/state/stategen",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/primitives",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/require",
        "//testing/util",
        "//time/slots",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_bitfield//:go-bitfield",
    ],
)
