load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "node",
    srcs = [
        "config.go",
        "log.go",
        "node.go",
        "options.go",
        "prometheus.go",
        "router.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/node",
    visibility = ["//visibility:public"],
    deps = [
        "//api/gateway",
        "//async/event",
        "//beacon-chain/blockchain",
        "//beacon-chain/builder",
        "//beacon-chain/cache",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/cache/depositsnapshot",
        "//beacon-chain/db",
        "//beacon-chain/db/kv",
        "//beacon-chain/db/slasherkv",
        "//beacon-chain/deterministic-genesis",
        "//beacon-chain/execution",
        "//beacon-chain/forkchoice",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/gateway",
        "//beacon-chain/monitor",
        "//beacon-chain/node/registration",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/synccommittee",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/rpc",
        "//beacon-chain/rpc/apimiddleware",
        "//beacon-chain/rpc/qrl/helpers",
        "//beacon-chain/slasher",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//beacon-chain/sync",
        "//beacon-chain/sync/backfill",
        "//beacon-chain/sync/checkpoint",
        "//beacon-chain/sync/genesis",
        "//beacon-chain/sync/initial-sync",
        "//cmd",
        "//cmd/beacon-chain/flags",
        "//config/features",
        "//config/params",
        "//consensus-types/primitives",
        "//container/slice",
        "//encoding/bytesutil",
        "//monitoring/prometheus",
        "//monitoring/tracing",
        "//runtime",
        "//runtime/debug",
        "//runtime/prereqs",
        "//runtime/version",
        "@com_github_gorilla_mux//:mux",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prysmaticlabs_fastssz//:fastssz",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//common",
        "@com_github_urfave_cli_v2//:cli",
    ],
)

go_test(
    name = "node_test",
    srcs = [
        "config_test.go",
        "node_test.go",
    ],
    embed = [":node"],
    deps = [
        "//beacon-chain/blockchain",
        "//beacon-chain/builder",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/execution",
        "//beacon-chain/execution/testing",
        "//beacon-chain/monitor",
        "//cmd",
        "//cmd/beacon-chain/flags",
        "//config/features",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "//runtime",
        "//runtime/interop",
        "//testing/assert",
        "//testing/require",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_zond//common",
        "@com_github_urfave_cli_v2//:cli",
    ],
)
