load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "p2p",
    srcs = [
        "addr_factory.go",
        "broadcaster.go",
        "config.go",
        "connection_gater.go",
        "dial_relay_node.go",
        "discovery.go",
        "doc.go",
        "fork.go",
        "fork_watcher.go",
        "gossip_scoring_params.go",
        "gossip_topic_mappings.go",
        "handshake.go",
        "info.go",
        "interfaces.go",
        "iterator.go",
        "log.go",
        "message_id.go",
        "monitoring.go",
        "options.go",
        "pubsub.go",
        "pubsub_filter.go",
        "pubsub_tracer.go",
        "rpc_topic_mappings.go",
        "sender.go",
        "service.go",
        "subnets.go",
        "topics.go",
        "utils.go",
        "watch_peers.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/p2p",
    visibility = ["//visibility:public"],
    deps = [
        "//async",
        "//beacon-chain/cache",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/time",
        "//beacon-chain/db",
        "//beacon-chain/p2p/encoder",
        "//beacon-chain/p2p/peers",
        "//beacon-chain/p2p/peers/peerdata",
        "//beacon-chain/p2p/peers/scorers",
        "//beacon-chain/p2p/types",
        "//beacon-chain/startup",
        "//cmd/beacon-chain/flags",
        "//config/features",
        "//config/params",
        "//consensus-types/primitives",
        "//consensus-types/wrapper",
        "//container/leaky-bucket",
        "//crypto/ecdsa",
        "//crypto/hash",
        "//encoding/bytesutil",
        "//io/file",
        "//math",
        "//monitoring/tracing",
        "//network",
        "//network/forks",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/metadata",
        "//runtime",
        "//runtime/version",
        "//time",
        "//time/slots",
        "@com_github_kr_pretty//:pretty",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//config",
        "@com_github_libp2p_go_libp2p//core/connmgr",
        "@com_github_libp2p_go_libp2p//core/control",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/peerstore",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p//p2p/transport/tcp",
        "@com_github_libp2p_go_libp2p_mplex//:go-libp2p-mplex",
        "@com_github_libp2p_go_libp2p_pubsub//:go-libp2p-pubsub",
        "@com_github_libp2p_go_libp2p_pubsub//pb",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@com_github_multiformats_go_multiaddr//net",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prysmaticlabs_fastssz//:fastssz",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_bitfield//:go-bitfield",
        "@com_github_theqrl_go_zond//p2p/discover",
        "@com_github_theqrl_go_zond//p2p/qnode",
        "@com_github_theqrl_go_zond//p2p/qnr",
        "@io_opencensus_go//trace",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "p2p_test",
    srcs = [
        "addr_factory_test.go",
        "broadcaster_test.go",
        "connection_gater_test.go",
        "dial_relay_node_test.go",
        "discovery_test.go",
        "fork_test.go",
        "gossip_scoring_params_test.go",
        "gossip_topic_mappings_test.go",
        "message_id_test.go",
        "options_test.go",
        "parameter_test.go",
        "pubsub_filter_test.go",
        "pubsub_fuzz_test.go",
        "pubsub_test.go",
        "rpc_topic_mappings_test.go",
        "sender_test.go",
        "service_test.go",
        "subnets_test.go",
        "utils_test.go",
    ],
    embed = [":p2p"],
    deps = [
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/cache",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/db/testing",
        "//beacon-chain/p2p/encoder",
        "//beacon-chain/p2p/peers",
        "//beacon-chain/p2p/peers/peerdata",
        "//beacon-chain/p2p/peers/scorers",
        "//beacon-chain/p2p/testing",
        "//beacon-chain/p2p/types",
        "//beacon-chain/startup",
        "//cmd/beacon-chain/flags",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//consensus-types/wrapper",
        "//container/leaky-bucket",
        "//crypto/ecdsa",
        "//crypto/hash",
        "//encoding/bytesutil",
        "//network",
        "//network/forks",
        "//proto/qrl/v1:qrl",
        "//proto/qrysm/v1alpha1",
        "//proto/testing",
        "//runtime/version",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "//time",
        "@com_github_golang_snappy//:snappy",
        "@com_github_libp2p_go_libp2p//:go-libp2p",
        "@com_github_libp2p_go_libp2p//core/crypto",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p//p2p/host/blank",
        "@com_github_libp2p_go_libp2p//p2p/net/swarm/testing",
        "@com_github_libp2p_go_libp2p//p2p/security/noise",
        "@com_github_libp2p_go_libp2p_pubsub//:go-libp2p-pubsub",
        "@com_github_libp2p_go_libp2p_pubsub//pb",
        "@com_github_multiformats_go_multiaddr//:go-multiaddr",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_bitfield//:go-bitfield",
        "@com_github_theqrl_go_zond//crypto",
        "@com_github_theqrl_go_zond//p2p/discover",
        "@com_github_theqrl_go_zond//p2p/qnode",
        "@com_github_theqrl_go_zond//p2p/qnr",
        "@org_golang_google_protobuf//proto",
    ],
)
