load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "rpc",
    srcs = [
        "log.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/rpc",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//beacon-chain/blockchain",
        "//beacon-chain/builder",
        "//beacon-chain/cache",
        "//beacon-chain/cache/depositcache",
        "//beacon-chain/core/feed/block",
        "//beacon-chain/core/feed/operation",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/db",
        "//beacon-chain/execution",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/synccommittee",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/rpc/core",
        "//beacon-chain/rpc/lookup",
        "//beacon-chain/rpc/qrl/beacon",
        "//beacon-chain/rpc/qrl/builder",
        "//beacon-chain/rpc/qrl/debug",
        "//beacon-chain/rpc/qrl/events",
        "//beacon-chain/rpc/qrl/node",
        "//beacon-chain/rpc/qrl/rewards",
        "//beacon-chain/rpc/qrl/validator",
        "//beacon-chain/rpc/qrysm/node",
        "//beacon-chain/rpc/qrysm/v1alpha1/beacon",
        "//beacon-chain/rpc/qrysm/v1alpha1/debug",
        "//beacon-chain/rpc/qrysm/v1alpha1/node",
        "//beacon-chain/rpc/qrysm/v1alpha1/validator",
        "//beacon-chain/rpc/qrysm/validator",
        "//beacon-chain/slasher",
        "//beacon-chain/startup",
        "//beacon-chain/state/stategen",
        "//beacon-chain/sync",
        "//config/features",
        "//config/params",
        "//io/logs",
        "//monitoring/tracing",
        "//proto/qrl/service",
        "//proto/qrysm/v1alpha1",
        "@com_github_gorilla_mux//:mux",
        "@com_github_grpc_ecosystem_go_grpc_middleware//:go-grpc-middleware",
        "@com_github_grpc_ecosystem_go_grpc_middleware//recovery",
        "@com_github_grpc_ecosystem_go_grpc_middleware//tracing/opentracing",
        "@com_github_grpc_ecosystem_go_grpc_prometheus//:go-grpc-prometheus",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_opencensus_go//plugin/ocgrpc",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//peer",
        "@org_golang_google_grpc//reflection",
    ],
)

go_test(
    name = "rpc_test",
    size = "medium",
    srcs = ["service_test.go"],
    embed = [":rpc"],
    deps = [
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/execution/testing",
        "//beacon-chain/sync/initial-sync/testing",
        "//testing/assert",
        "//testing/require",
        "@com_github_gorilla_mux//:mux",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
    ],
)
