load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "slasher",
    srcs = [
        "chunks.go",
        "detect_attestations.go",
        "detect_blocks.go",
        "doc.go",
        "helpers.go",
        "log.go",
        "metrics.go",
        "params.go",
        "process_slashings.go",
        "queue.go",
        "receive.go",
        "rpc.go",
        "service.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/slasher",
    visibility = ["//visibility:public"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/feed/state",
        "//beacon-chain/db",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/slasher/types",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//beacon-chain/sync",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//container/slice",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prysmaticlabs_fastssz//:fastssz",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_opencensus_go//trace",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
    ],
)

go_test(
    name = "slasher_test",
    srcs = [
        "chunks_test.go",
        "detect_attestations_test.go",
        "detect_blocks_test.go",
        "helpers_test.go",
        "params_test.go",
        "process_slashings_test.go",
        "queue_test.go",
        "receive_test.go",
        "rpc_test.go",
        "service_test.go",
    ],
    embed = [":slasher"],
    deps = [
        "//async/event",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/core/signing",
        "//beacon-chain/db/testing",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/operations/slashings/mock",
        "//beacon-chain/slasher/types",
        "//beacon-chain/startup",
        "//beacon-chain/state/stategen",
        "//beacon-chain/sync/initial-sync/testing",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/primitives",
        "//crypto/ml_dsa_87",
        "//encoding/bytesutil",
        "//proto/qrysm/v1alpha1",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "//time/slots",
        "@com_github_prysmaticlabs_fastssz//:fastssz",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
    ],
)
