load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "startup",
    srcs = [
        "clock.go",
        "synchronizer.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/startup",
    visibility = ["//visibility:public"],
    deps = [
        "//consensus-types/primitives",
        "//time/slots",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "startup_test",
    srcs = [
        "clock_test.go",
        "synchronizer_test.go",
    ],
    embed = [":startup"],
    deps = [
        "//config/params",
        "//consensus-types/primitives",
        "//encoding/bytesutil",
        "//testing/require",
    ],
)
