load("@qrysm//tools/go:def.bzl", "go_library")

go_library(
    name = "state",
    srcs = [
        "error.go",
        "interfaces.go",
        "prometheus.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/state",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_theqrl_go_bitfield//:go-bitfield",
    ],
)
