load("@qrysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "sync",
    srcs = [
        "batch_verifier.go",
        "block_batcher.go",
        "context.go",
        "deadlines.go",
        "decode_pubsub.go",
        "doc.go",
        "error.go",
        "fork_watcher.go",
        "log.go",
        "metrics.go",
        "options.go",
        "pending_attestations_queue.go",
        "pending_blocks_queue.go",
        "rate_limiter.go",
        "rpc.go",
        "rpc_beacon_blocks_by_range.go",
        "rpc_beacon_blocks_by_root.go",
        "rpc_chunked_response.go",
        "rpc_goodbye.go",
        "rpc_metadata.go",
        "rpc_ping.go",
        "rpc_send_request.go",
        "rpc_status.go",
        "service.go",
        "subscriber.go",
        "subscriber_beacon_aggregate_proof.go",
        "subscriber_beacon_attestation.go",
        "subscriber_beacon_blocks.go",
        "subscriber_handlers.go",
        "subscriber_sync_committee_message.go",
        "subscriber_sync_contribution_proof.go",
        "subscription_topic_handler.go",
        "validate_aggregate_proof.go",
        "validate_attester_slashing.go",
        "validate_beacon_attestation.go",
        "validate_beacon_blocks.go",
        "validate_proposer_slashing.go",
        "validate_sync_committee_message.go",
        "validate_sync_contribution_proof.go",
        "validate_voluntary_exit.go",
    ],
    importpath = "github.com/theQRL/qrysm/beacon-chain/sync",
    visibility = ["//visibility:public"],
    deps = [
        "//async",
        "//async/abool",
        "//async/event",
        "//beacon-chain/blockchain",
        "//beacon-chain/cache",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/blocks",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/block",
        "//beacon-chain/core/feed/operation",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/core/transition",
        "//beacon-chain/core/transition/interop",
        "//beacon-chain/db",
        "//beacon-chain/db/filters",
        "//beacon-chain/execution",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/operations/synccommittee",
        "//beacon-chain/operations/voluntaryexits",
        "//beacon-chain/p2p",
        "//beacon-chain/p2p/encoder",
        "//beacon-chain/p2p/peers",
        "//beacon-chain/p2p/types",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/stategen",
        "//cache/lru",
        "//cmd/beacon-chain/flags",
        "//config/features",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//container/leaky-bucket",
        "//container/slice",
        "//crypto/ml_dsa_87",
        "//crypto/rand",
        "//encoding/bytesutil",
        "//encoding/ssz/equality",
        "//monitoring/tracing",
        "//network/forks",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/attestation",
        "//proto/qrysm/v1alpha1/metadata",
        "//runtime",
        "//runtime/messagehandler",
        "//runtime/version",
        "//time",
        "//time/slots",
        "@com_github_hashicorp_golang_lru//:golang-lru",
        "@com_github_libp2p_go_libp2p//core",
        "@com_github_libp2p_go_libp2p//core/host",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p_pubsub//:go-libp2p-pubsub",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_pkg_errors//:errors",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prysmaticlabs_fastssz//:fastssz",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_theqrl_go_zond//common/hexutil",
        "@com_github_trailofbits_go_mutexasserts//:go-mutexasserts",
        "@io_opencensus_go//trace",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "sync_test",
    srcs = [
        "batch_verifier_test.go",
        "block_batcher_test.go",
        "context_test.go",
        "decode_pubsub_test.go",
        "error_test.go",
        "fork_watcher_test.go",
        "pending_attestations_queue_test.go",
        "pending_blocks_queue_test.go",
        "rate_limiter_test.go",
        "rpc_beacon_blocks_by_range_test.go",
        "rpc_beacon_blocks_by_root_test.go",
        "rpc_chunked_response_test.go",
        "rpc_goodbye_test.go",
        "rpc_handler_test.go",
        "rpc_metadata_test.go",
        "rpc_ping_test.go",
        "rpc_send_request_test.go",
        "rpc_status_test.go",
        "rpc_test.go",
        "service_test.go",
        "subscriber_beacon_aggregate_proof_test.go",
        "subscriber_beacon_blocks_test.go",
        "subscriber_test.go",
        "subscription_topic_handler_test.go",
        "sync_fuzz_test.go",
        "sync_test.go",
        "validate_aggregate_proof_test.go",
        "validate_attester_slashing_test.go",
        "validate_beacon_attestation_test.go",
        "validate_beacon_blocks_test.go",
        "validate_proposer_slashing_test.go",
        "validate_sync_committee_message_test.go",
        "validate_sync_contribution_proof_test.go",
        "validate_voluntary_exit_test.go",
    ],
    embed = [":sync"],
    deps = [
        "//async/abool",
        "//beacon-chain/blockchain",
        "//beacon-chain/blockchain/testing",
        "//beacon-chain/cache",
        "//beacon-chain/core/altair",
        "//beacon-chain/core/feed",
        "//beacon-chain/core/feed/operation",
        "//beacon-chain/core/helpers",
        "//beacon-chain/core/signing",
        "//beacon-chain/core/time",
        "//beacon-chain/core/transition",
        "//beacon-chain/db",
        "//beacon-chain/db/kv",
        "//beacon-chain/db/testing",
        "//beacon-chain/execution",
        "//beacon-chain/execution/testing",
        "//beacon-chain/forkchoice/doubly-linked-tree",
        "//beacon-chain/operations/attestations",
        "//beacon-chain/operations/slashings",
        "//beacon-chain/p2p",
        "//beacon-chain/p2p/encoder",
        "//beacon-chain/p2p/peers",
        "//beacon-chain/p2p/testing",
        "//beacon-chain/p2p/types",
        "//beacon-chain/startup",
        "//beacon-chain/state",
        "//beacon-chain/state/state-native",
        "//beacon-chain/state/stategen",
        "//beacon-chain/sync/initial-sync/testing",
        "//cache/lru",
        "//cmd/beacon-chain/flags",
        "//config/fieldparams",
        "//config/params",
        "//consensus-types/blocks",
        "//consensus-types/interfaces",
        "//consensus-types/primitives",
        "//consensus-types/wrapper",
        "//container/leaky-bucket",
        "//container/slice",
        "//crypto/ml_dsa_87",
        "//crypto/rand",
        "//encoding/bytesutil",
        "//encoding/ssz/equality",
        "//network/forks",
        "//proto/engine/v1:engine",
        "//proto/qrysm/v1alpha1",
        "//proto/qrysm/v1alpha1/attestation",
        "//proto/qrysm/v1alpha1/metadata",
        "//testing/assert",
        "//testing/require",
        "//testing/util",
        "//time",
        "//time/slots",
        "@com_github_d4l3k_messagediff//:messagediff",
        "@com_github_golang_snappy//:snappy",
        "@com_github_libp2p_go_libp2p//core",
        "@com_github_libp2p_go_libp2p//core/network",
        "@com_github_libp2p_go_libp2p//core/peer",
        "@com_github_libp2p_go_libp2p//core/protocol",
        "@com_github_libp2p_go_libp2p_pubsub//:go-libp2p-pubsub",
        "@com_github_libp2p_go_libp2p_pubsub//pb",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_pkg_errors//:errors",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_sirupsen_logrus//hooks/test",
        "@com_github_theqrl_go_bitfield//:go-bitfield",
        "@com_github_theqrl_go_zond//common",
        "@com_github_theqrl_go_zond//core/types",
        "@com_github_theqrl_go_zond//p2p/qnr",
        "@org_golang_google_protobuf//proto",
    ],
)
